Port sseStart / sseStop / websocketConsumerStart / websocketConsumerStop jQuery functions into Angular Scope functions on view1 controller.

--- a/webmvc-app/src/main/resources/static/app/index.html
+++ b/webmvc-app/src/main/resources/static/app/index.html
@@ -33,7 +33,8 @@
   -->
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="bower_components/ng-websocket/ng-websocket.js"></script>
+  <script src="bower_components/sockjs-client/dist/sockjs-1.0.3.min.js"></script>
+  <script src="bower_components/stomp-websocket/lib/stomp.min.js"></script>
 
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
