Port webSocketStart and webSocketStop using Angular's $http.

--- a/webmvc-app/src/main/resources/static/app/view1/view1.html
+++ b/webmvc-app/src/main/resources/static/app/view1/view1.html
@@ -9,8 +9,8 @@
 
 <h3>WebSocket Stream:</h3>
 <p>
-  <button id="webSocketStart">Start</button>
-  <button id="webSocketStop">Stop</button>
+  <button id="webSocketStart" ng-click="webSocketStart()">Start</button>
+  <button id="webSocketStop" ng-click="webSocketStop()">Stop</button>
 </p>
 
 <h3>WebSocket Stream Consumer:</h3>
