--- a/webmvc-app/src/main/resources/static/app/index.html
+++ b/webmvc-app/src/main/resources/static/app/index.html
@@ -33,6 +33,8 @@
   -->
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="bower_components/lodash/lodash.min.js"></script>
+  <script src="bower_components/restangular/dist/restangular.min.js"></script>
   <script src="bower_components/sockjs-client/dist/sockjs-1.0.3.min.js"></script>
   <script src="bower_components/stomp-websocket/lib/stomp.min.js"></script>
 
